Cleaning up some Sass partials to conform to convention

--- a/app/assets/stylesheets/partials/abstractions/_divider.scss
+++ b/app/assets/stylesheets/partials/abstractions/_divider.scss
@@ -27,7 +27,7 @@
 
 /* Modifiers at breakpoints */
 @include respond-min($non-palm) {
-  /* Modifier: base spacing only at palm */
+  /* Modifier: base spacing only at non palm */
   .divider--palm {
     margin-bottom: 0;
     padding-bottom: 0;
