--- a/app/assets/stylesheets/partials/abstractions/_frame.scss
+++ b/app/assets/stylesheets/partials/abstractions/_frame.scss
@@ -16,7 +16,7 @@
 }
 
 /* Modifier: change to `inline-block` */
-.frame--inline {display: inline-block;}
+.frame--inline-block {display: inline-block;}
 
 	/* Caption */
 	.frame__caption {
