--- a/app/assets/stylesheets/partials/abstractions/_island.scss
+++ b/app/assets/stylesheets/partials/abstractions/_island.scss
@@ -21,12 +21,12 @@
 /*
   Same as island, but with half the spacing.
 
-  .islet-ends         - Top and bottom padding
+  .islet-ends         - Top/bottom padding
   .islet-sides        - Left/right padding
-  .islet-top          - Top padding
-  .islet-btm          - Bottom padding
-  .islet-left         - Left padding
-  .islet-right        - Right padding
+  .islet-top          - Padding top
+  .islet-btm          - Padding bottom
+  .islet-left         - Padding left
+  .islet-right        - Padding right
   .islet--center      - Center align
   .islet--fill        - Solid background
 
