--- a/app/views/centre_info/_getting_here.html.erb
+++ b/app/views/centre_info/_getting_here.html.erb
@@ -28,10 +28,10 @@
       <%# //Static Google map %>
 
       <%# Centre address and image %>
-      <div class="centre-location__info box slats">
+      <div class="centre-location__info box slats slats--compact">
 
         <%# Centre image %>
-        <div class="slats__img slats__img--compact">
+        <div class="slats__img">
           <%= image_tag "heroes/#{@centre.code}.jpg",
             :crop => :thumb,
             :width => 120,
