--- a/app/views/shared/tiles/_canned_search.html.erb
+++ b/app/views/shared/tiles/_canned_search.html.erb
@@ -30,6 +30,6 @@
 
 <%# Alternative icon %>
 <% if result.icon == 'products' %>
-  <span class="tile__icon-alt icon icon--product-collection icon--flush-top icon--lrg" aria-hidden="true"></span>
+  <span class="tile__icon-alt icon icon--collection icon--flush-top icon--lrg" aria-hidden="true"></span>
 <% end %>
 <%# //Alternative icon %>
