--- a/app/views/shared/tiles/_curation.html.erb
+++ b/app/views/shared/tiles/_curation.html.erb
@@ -30,5 +30,5 @@
 <%# //Meta %>
 
 <%# Alternative icon %>
-<span class="tile__icon-alt icon icon--product-curation icon--flush-top icon--lrg" aria-hidden="true"></span>
+<span class="tile__icon-alt icon icon--curation icon--flush-top icon--lrg" aria-hidden="true"></span>
 <%# //Alternative icon %>
