--- a/app/views/styleguide/modules/_centre_location.html.erb
+++ b/app/views/styleguide/modules/_centre_location.html.erb
@@ -20,8 +20,8 @@
       <img alt="Google map showing location of Bondi Junction shopping centre" src="http://maps.googleapis.com/maps/api/staticmap?client=gme-westfieldltd&amp;markers=scale%3A1%7Cicon%3Ahttp%3A%2F%2Fres.cloudinary.com%2Fwlabs%2Fimage%2Fasset%2Ficon_map_pointer-8ab66b4319aba1123254db978dc78dba.png%7C-33.891289%2C151.250815&amp;scale=1&amp;sensor=false&amp;size=980x280&amp;zoom=15&amp;signature=Vlbs9WnZYXpNV-AtuKcdCJ_6-UQ=">
     </div>
 
-    <div class="centre-location__info box slats">
-      <div class="slats__img slats__img--compact">
+    <div class="centre-location__info box slats slats--compact">
+      <div class="slats__img">
         <img alt="" height="130" onerror="this.remove();" src="http://res.cloudinary.com/wlabs/image/asset/c_thumb,f_auto,h_130,w_120/bondijunction-c5c77c76a20c6c4f38544a049e61509c.jpg" width="120">
       </div>
       <div class="slats__body islet">
