fix base mark styles

--- a/app/assets/stylesheets/partials/base/_misc.scss
+++ b/app/assets/stylesheets/partials/base/_misc.scss
@@ -56,7 +56,7 @@ s {text-decoration: line-through;}
 /* [MARK]
 -------------------------------------------------------*/
 mark {
-  background-color: transparent;;
-  font-weight: strong;
+  background: none;
+  font-weight: bold;
   color: inherit;
 }
