--- a/app/assets/stylesheets/partials/abstractions/_box.scss
+++ b/app/assets/stylesheets/partials/abstractions/_box.scss
@@ -10,7 +10,7 @@
   .box--torn          - Torn paper treatment
   .box--mrg-base      - Base bottom spacing
   .box--mrg-half      - Half bottom spacing
-  .box--sphere        - Modifier: make into a sphere
+  .box--sphere        - make into a sphere
 
   Styleguide Box
 */
