Using vars instead of raw numbers for detail view col positioning

--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -172,10 +172,10 @@
         height: 100%;
 
         /* Deal */
-        .detail-view--deal & {left: 50%;}
+        .detail-view--deal & {left: $one-half;}
 
         /* Product */
-        .detail-view--product & {left: 60%;}
+        .detail-view--product & {left: $three-fifths;}
       }
   }
 
