remove redundant class

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -17,7 +17,7 @@
   <nav role="navigation">
     <ul class="grid grid--mrg-base-non-palm grid--non-linear">
       <% @links.each do |kind| %>
-        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter txt-center">
+        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
           <%= link_to kind.url, class: "flag flag--spacing-half flag--shrink-wrap" do %>
             <div class="flag__img">
               <div class="box box--sphere islet island-non-palm">
