--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -258,7 +258,7 @@
 /* Modifier: extra large */
 .icon--giga:before {@include font-size($font-size-giga, 1);}
 
-.icon--mega:before {@include font-size($font-size-mega, 1);}
+.icon--mega:before {@include font-size(30, 1);}
 
 .icon--kilo:before {@include font-size($font-size-kilo, 1);}
 
