Updates to Flag & Slats abstractions

--- a/app/assets/stylesheets/partials/abstractions/_flag.scss
+++ b/app/assets/stylesheets/partials/abstractions/_flag.scss
@@ -7,6 +7,7 @@
 
   .flag--shrink-wrap          - Shrink wrap
   .flag--spacing-half         - Half spacing between image- and text-like content
+  .flag--rev                  - Reverse the positioning of image- and text-like content
   .flag--align-top            - Top alignment
   .flag--align-btm            - Bottom alignment
 
@@ -42,16 +43,15 @@
   .flag__img {
     @include to-rem(padding-right, $spacing-base);
 
-    /* Modifier: Half spacing between image- and text-like content */
+    /* Modifier: half spacing between image- and text-like content */
     .flag--spacing-half & {@include to-rem(padding-right, $spacing-half);}
 
-    /* Modifier: switch the padding around for when the image is on the right of `flag__body` */
+    /* Modifier: reverse the positioning of image- and text-like content */
     .flag--rev & {
       padding-right: 0;
       @include to-rem(padding-left, $spacing-base);
-
     }
 
-    /* Modifier: Half spacing between image- and text-like content */
+    /* Modifier: half spacing between image- and text-like content when used with 'Reversed' modifier */
     .flag--rev.flag--spacing-half & {@include to-rem(padding-left, $spacing-half);}
   }
