--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -24,9 +24,10 @@
       <%# Hero heading wrap %>
       <div class="national__heading__intro">
         <h1>
-          <span><%= @centres.length %> centres. Over 10,300 stores. Over <%= number_with_delimiter(@products_count, separator: ',') %> products</span>
-          AUTUMN 2014
+          <span>Westfield Sydney, <time datetime="2014-04-15T12:00:00+1000">12pm Tuesday 15th</time></span>
+          GIULIANA RANCIC
         </h1>
+        <a href="http://www.westfield.com.au/sydney/events/3871">Event details<span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a>
       </div>
       <%# //Hero heading wrap %>
 
