--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -120,14 +120,14 @@
           --><li ng-if="filterIsAvailable(search.retailers.values)">
 
             <%# Narrow view trigger %>
-            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter($event, 'retailer')" class="filters__trigger filters__trigger--narrow drop-down-menu__hdr-btn drop-down-menu__divider btn btn--full btn--full-left btn--pointer">
+            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter($event, 'retailer')" class="filters__trigger filters__trigger--narrow drop-down-menu__hdr-btn drop-down-menu__divider btn btn--full btn--full-left btn--pointer" ng-class="{'is-disabled': filterIsDisabled('retailers')}">
               {{ search.retailers.title }}
               <span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span>
             </button>
             <%# //Narrow view trigger %>
 
             <%# Wide view trigger %>
-            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter($event, 'retailer')" aria-haspopup="true" aria-expanded="{{activeFilter === 'retailer'}}" aria-controls="filters-retailer" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white" ng-class="{'is-active': activeFilter === 'retailer'}">
+            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter($event, 'retailer')" aria-haspopup="true" aria-expanded="{{activeFilter === 'retailer'}}" aria-controls="filters-retailer" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white" ng-class="{'is-active': activeFilter === 'retailer', 'is-disabled': filterIsDisabled('retailers')}">
               {{ search.retailers.title }}
               <span class="icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             </button>
@@ -163,14 +163,14 @@
           --><li ng-if="filterIsAvailable(search.brands.values)">
 
             <%# Narrow view trigger %>
-            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter($event, 'brand')" class="filters__trigger filters__trigger--narrow drop-down-menu__hdr-btn drop-down-menu__divider btn btn--full btn--full-left btn--pointer">
+            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter($event, 'brand')" class="filters__trigger filters__trigger--narrow drop-down-menu__hdr-btn drop-down-menu__divider btn btn--full btn--full-left btn--pointer" ng-class="{'is-active': activeFilter === 'brand', 'is-disabled': filterIsDisabled('brands')}">
               {{ search.brands.title }}
               <span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span>
             </button>
             <%# //Narrow view trigger %>
 
             <%# Wide view trigger %>
-            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter($event, 'brand')" aria-haspopup="true" aria-expanded="{{activeFilter === 'brand'}}" aria-controls="filters-brand" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white" ng-class="{'is-active': activeFilter === 'brand'}">
+            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter($event, 'brand')" aria-haspopup="true" aria-expanded="{{activeFilter === 'brand'}}" aria-controls="filters-brand" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white" ng-class="{'is-active': activeFilter === 'brand', 'is-disabled': filterIsDisabled('brands')}">
               {{ search.brands.title }}
               <span class="icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             </button>
