[Spike, WSF-6459] Verify if GA codes work in UAT as part of GA Content Experiment test

--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -115,14 +115,38 @@
 
   <%#
     [WSF-6459]
-    Added conditional statement to only insert the Google Analytics Content Experiment (GACE) code in UAT environment for testing purpose.
-    The purpose of the test is to figure out what the GACE code does prior to implementing a solution for the A/B testing.
-    The conditional statement will be removed once it is tested successfully in UAT.
+    Added conditional statement to only insert the Google Analytics (GA) codes in UAT environment for testing purpose.
+    The purpose of the test is to verify if GA is working in UAT prior to implementing a solution for the A/B testing.
+
+    Note: The GA Content Experiment code will only work within a script tag after some experimentation.
+
+    Post UAT TODO:
+      * Remove the conditional statement
+      * Move GA code into Tealium
   %>
   <% if Rails.env.uat? %>
-    <%# Google Analytics Content Experiment %>
-    <%= javascript_include_tag "vendor/google-analytics-content-experiment" %>
-    <%# //Google Analytics Content Experiment %>
+    <%# Google Analytics Content Experiment code %>
+    <script>function utmx_section(){}function utmx(){}(function(){var
+    k='84750189-7',d=document,l=d.location,c=d.cookie;
+    if(l.search.indexOf('utm_expid='+k)>0)return;
+    function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
+    indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
+    length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
+    '<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
+    '://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
+    '&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
+    valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
+    '" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
+    </script><script>utmx('url','A/B');</script>
+    <%# //End of Google Analytics Content Experiment code %>
+    <%# Google Analytics code %>
+    <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-3643495-24', 'westfield.com.au');
+    ga('send', 'pageview');</script>
+    <%# //End of Google Analytics code %>
   <% end %>
 </body>
 
