--- a/app/assets/stylesheets/partials/layout/_national.scss
+++ b/app/assets/stylesheets/partials/layout/_national.scss
@@ -26,42 +26,43 @@
   /* [INNER WRAPPER]
   -------------------------------------------------------*/
   .national__inner {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 
     /* [Text colour change] change this to colour needed */
     &,
     a,
     .icon:before {color: $color-grey-dark-1;}
-
-    @include respond-min($non-palm) {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-    }
   }
 
     /* [HEADER]
     -------------------------------------------------------*/
     .national__logo,
-    .national__heading__intro,
-    .national__header nav {
-      position: absolute;
-      /* Setting it at a higher `z-index` than `img-rotate__item` */
-      z-index: 2;
-    }
+    .national__header__intro,
+    .national__header nav {position: absolute;}
 
     .national__header {
-      /* Need the height for vertical alignment of the text and video thumbnail to work */
       @include to-rem(height, 250);
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: 0 0;
 
-      /* By making it shorter than 100%, we will have room to show the centres tiles at this breakpoint */
-      @include respond-min($non-palm) {
+      @include respond-group-min-width-height($non-palm, $non-palm) {
         height: 60%;
-        @include to-rem(min-height, 400);
       }
 
-      /* Show more of the image at this breakpoint */
+      @include respond-max($palm) {
+        background-image: cloudinary-url("heroes/national/national-hero-01-sml.jpg", $quality: 88, $fetch_format: 'auto');
+      }
+
+      @include respond-range($lap, $lap-sml-end) {
+        background-image: cloudinary-url("heroes/national/national-hero-01-med.jpg", $quality: 88, $fetch_format: 'auto');
+      }
+
       @include respond-min($lap-lrg) {
-        height: 80%;
+        background-image: cloudinary-url("heroes/national/national-hero-01-lrg.jpg", $quality: 88, $fetch_format: 'auto');
+        height: 75%;
       }
 
       /*
@@ -121,7 +122,7 @@
       }
 
       /* Wrapper around the hero heading and video thumbnail */
-      .national__heading__intro {
+      .national__header__intro {
         top: 50%;
         left: 0;
         @include translateY(-50%);
@@ -178,7 +179,7 @@
       }
 
       @include respond-min($lap-lrg) {
-        background-image: cloudinary-url("heroes/national/national-hero-01-lrg.jpg", $quality: 90, $fetch_format: 'auto');
+        background-image: cloudinary-url("heroes/national/national-hero-01-lrg.jpg", $quality: 88, $fetch_format: 'auto');
       }
     }
 
@@ -257,13 +258,7 @@
         li:first-child & {box-shadow: inset 0 4px 4px 0 rgba(#000, 0.4)}
 
         /* Inner container */
-        .container {
-          @include to-rem(padding, 30 $spacing-base 30 0);
-
-          @include respond-min($non-palm) {
-            @include to-rem(padding, $spacing-dbl 0);
-          }
-        }
+        .container {@include to-rem(padding, 30 $spacing-base 30 0);}
 
           /* Centre name */
           .h1 {
@@ -271,7 +266,11 @@
             text-transform: uppercase;
 
             @include respond-min($non-palm) {
-              @include font-size(50);
+              @include font-size(38);
+            }
+
+            @include respond-min($desk) {
+              @include font-size(48);
             }
           }
 
@@ -284,7 +283,7 @@
             @include font-size(36, 1);
 
             @include respond-min($non-palm) {
-              @include font-size($font-size-kilo, 1);
+              display: none;
             }
           }
       }
