singularize curation icons

--- a/app/views/shared/tiles/_canned_search.html.erb
+++ b/app/views/shared/tiles/_canned_search.html.erb
@@ -29,7 +29,7 @@
 <%# //Meta %>
 
 <%# Alternative icon %>
-<% if result.icon == 'products' %>
+<% if result.icon == 'product' %>
   <span class="tile__icon-alt icon icon--collection icon--flush-top icon--lrg" aria-hidden="true"></span>
 <% end %>
 <%# //Alternative icon %>
