--- a/app/views/shared/tiles/_curation.html.erb
+++ b/app/views/shared/tiles/_curation.html.erb
@@ -23,7 +23,7 @@
   <%# //Tagline %>
 
   <%# Icon %>
-  <span class="tile__meta__icon icon icon--products icon--lrg" aria-hidden="true"></span>
+  <span class="tile__meta__icon icon icon--product icon--lrg" aria-hidden="true"></span>
   <%# //Icon %>
 
 </div>
