Use bower for including jquery-placeholder

--- a/app/assets/javascripts/support/placeholder-test.js.coffee.erb
+++ b/app/assets/javascripts/support/placeholder-test.js.coffee.erb
@@ -1,3 +1,3 @@
 Modernizr.load
   test: Modernizr.input.placeholder,
-  nope: ['<%= asset_url "jquery-extensions/jquery.placeholder" %>', '<%= asset_url "support/placeholder-init" %>']
+  nope: ['<%= asset_url "jquery-placeholder" %>', '<%= asset_url "support/placeholder-init" %>']
