dont show shop products icon for ie9 users until product browse loop bug is fixed

--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -33,12 +33,14 @@
       <%# Nav %>
       <nav role="navigation">
         <ul class="horiz-list horiz-list--spacing-half">
+          <!--[if gt IE 9]><!-->
           <li>
             <a href="<%= products_path %>">
               <span class="icon icon--shirt" aria-hidden="true"></span>
               Shop products
             </a>
           </li>
+          <!--<![endif]-->
           <li>
             <a href="http://www.westfieldgiftcards.com.au" rel="external" target="_blank">
               <span class="icon icon--gift-card" aria-hidden="true"></span>
