Removing Image Rotate module

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -137,10 +137,10 @@
 @import "partials/modules/fine-print";
 @import "partials/modules/promo-tile";
 @import "partials/modules/fallback-msg";
-@import "partials/modules/img-rotate";
 @import "partials/modules/product-curation";
 @import "partials/modules/price-strip";
 //@import "partials/modules/sprite";
+//@import "partials/modules/img-rotate";
 
   /* Modules -> Widgets */
   @import "partials/modules/widgets/flexslider";
